# spsoft-test-task

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
app/: agent.py  main.py  server.py  sessions.py
